--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -12,7 +12,7 @@ background-size: cover;">
           <% if account_signed_in? %>
             <%= link_to "Cerrar Sesión", destroy_account_session_path, data: { turbo_method: :delete }, class: "btn btn-primary" %>
           <% else %>
-            <%= link_to "Admin", new_account_session_path, class: "btn btn-primary" %>
+            <%= link_to "Log-In", new_account_session_path, class: "btn btn-primary" %>
           <% end %>
       </div>
     </div>
@@ -20,7 +20,9 @@ background-size: cover;">
 
   <div style="padding: 10px;">
     <h1>Propiedades disponibles</h1>
-    <%= link_to "Nueva Propiedad", new_property_path, class:"btn btn-info" %>
+    <% if account_signed_in? %>
+      <%= link_to "Nueva Propiedad", new_property_path, class:"btn btn-info" %>
+    <% end %> 
   </div>
   <div class="row" style="padding: 25px;" >
     <% @properties.each do |property| %>
