--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,31 @@
     
 
     <!-- Latest compiled and minified JavaScript -->
+  <script>
+    document.addEventListener("turbo:load", () => {
+      const track = document.querySelector(".slider-track");
+      const nextBtn = document.querySelector(".next");
+      const prevBtn = document.querySelector(".prev");
+      const images = document.querySelectorAll(".slider-image");
+      let index = 0;
+
+      function updateSlide() {
+        const offset = -index * 100;
+        track.style.transform = `translateX(${offset}%)`;
+      }
+
+      nextBtn.addEventListener("click", () => {
+        index = (index + 1) % images.length;
+        updateSlide();
+      });
+
+      prevBtn.addEventListener("click", () => {
+        index = (index - 1 + images.length) % images.length;
+        updateSlide();
+      });
+    });
+  </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
