--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,24 +1,14 @@
 <body style="background-image: url(/assets/background-index.jpg); background-position: center;
 background-repeat: no-repeat; 
 background-size: cover;">
-    <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-        </a>
-      </div>
-
-      <div style="text-align: right; margin: 10px;">
-          <% if account_signed_in? %>
-            <%= link_to "Cerrar Sesión", destroy_account_session_path, data: { turbo_method: :delete }, class: "btn btn-primary" %>
-          <% else %>
-            <%= link_to "Log-In", new_account_session_path, class: "btn btn-primary" %>
-          <% end %>
-      </div>
-    </div>
-  </nav>
-
   <div style="padding: 10px;">
+    <div style="text-align: right; margin: 10px;">
+      <% if account_signed_in? %>
+        <%= link_to "Cerrar Sesión", destroy_account_session_path, data: { turbo_method: :delete }, class: "btn btn-primary" %>
+      <% else %>
+        <%= link_to "Log-In", new_account_session_path, class: "btn btn-primary" %>
+      <% end %>
+    </div>
     <h1>Propiedades disponibles</h1>
     <% if account_signed_in? %>
       <%= link_to "Nueva Propiedad", new_property_path, class:"btn btn-info" %>
@@ -33,7 +23,11 @@ background-size: cover;">
       box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
       backdrop-filter: blur(5px);
       -webkit-backdrop-filter: blur(5px);">
-        <img src="..." alt="foto de la casa o depa">
+        <div class="index_photo">
+          <% if property.photos.attached? %>
+            <%= image_tag property.photos.first, alt: "foto de la propiedad", class: "foto_casa" %>
+          <% end %>
+        </div>
         <div class="caption">
           <h3></h3>
           <p>Dirección: <%= property.direccion %></p>
