--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -23,17 +23,21 @@
             <div class="footer_texto">acuñainmobiliaria@gmail.com</div>
         </div>
 
-        <div class="footer_detalles">
-            <div class="footer_icono">
+    <div class="footer_detalles">
+        <div class="footer_icono">
                 <span class="material-symbols-outlined">
                     phone_enabled
                 </span>
             </div>
-            <div class="footer_texto">(52) 477-730-99-39</div>
-        </div>
-
-        <div class="boton">
-            <a href="">Contáctanos</a>
+            <div class="footer_texto">
+                (52) 477-730-99-39
+            </div>
         </div>
     </div>
+</div>
+
+<div class="boton_catalogo" style="text-align: center">
+    <a href="https://wa.me/524777309939" target="_blank" class="boton">
+        Contáctanos
+    </a>
 </div>
