--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -46,7 +46,7 @@
       <%= form.file_field :photos, multiple: true, accept:'image/*' %>
     </div>
 
-  <div>
-    <%= form.button "Agregar nueva propiedad", type: "submit", class: "btn btn-primary" %>
+  <div style="margin-top: 15px;">
+    <%= form.button "Agregar", type: "submit", class: "btn btn-primary" %>
   </div>
 <% end %>
