fixes por rebranding

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -227,13 +227,13 @@ p {
 }
 
 
-.logo_acra {
-    height: 40vh;
+.logo_contuksa {
+    height: 65vh;
     width: 400px;
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: image-url("logo-acra.png");
+    background-image: image-url("contuksa_logo.png");
 }
 
 .cta-vender {
@@ -303,8 +303,8 @@ p {
 }
 
 .footer_logo {
-    background-image: image_url("logo-acra.png");
-    height: 125px;
+    background-image: image_url("contuksa_logo.png");
+    height: 155px;
     width: 40%;
     background-position: center;
     background-size: contain;
@@ -326,7 +326,7 @@ p {
 }
 
 .header_logo {
-    background-image: image_url("acra_header.png");
+    background-image: image_url("contuksa_logo.png");
     height: 6vh;
     width: 100px;
     background-repeat: no-repeat;
