--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
     <div class="hero_banner">
         <div class="titulo">
-            <div class="logo_acra"></div>
-            <h3>Soluciones totales</h3>
+            <div class="logo_contuksa"></div>
         </div>
         <div class="imagen_bienvenida">
             
