--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -20,7 +20,7 @@
                     mail
                 </span>
             </div>
-            <div class="footer_texto">acuñainmobiliaria@gmail.com</div>
+            <div class="footer_texto">contuksainmobiliairia@gmail.com</div>
         </div>
 
     <div class="footer_detalles">
