--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -186,6 +186,7 @@ p {
 }
 
 .reviews_titulo h1 {
+    font-weight: 700;
     font-size: 2rem;
     color: var(--azul-base);
     margin-bottom: 40px;
