--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -1,7 +1,3 @@
-.foto_casa {
-    border-radius: 8px;
-}
-
 .botones_index {
     display: flex;
     justify-content: space-between;
@@ -21,7 +17,31 @@
     margin: 0px;
 }
 
+.boton_login {
+    padding: 12px 24px;
+    border-radius: 6px;
+    font-weight: bold;
+}
+
 .boton:hover {
     background-color: var(--dorado);
     color: var(--negro);
+}
+
+.index_photo {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f0f0f0;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.foto_casa {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  display: block;
 }
