--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -61,7 +61,7 @@
 
     <div class="reviews">
         <div class="reviews_titulo">
-            <h1>Que dicen nuestros clientes</h1>
+            <h1>¿Qué dicen nuestros clientes?</h1>
         </div>
         <div class="reviews_container">
             <div class="review_tarjeta">
