--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -327,7 +327,7 @@ p {
 }
 
 .header_logo {
-    background-image: image_url("contuksa_logo.png");
+    background-image: image_url("contuksa_logo_header.png");
     height: 6vh;
     width: 100px;
     background-repeat: no-repeat;
